# triangle-wayland-opengl

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
src/: egl-thing.c  egl-thing.h  state.h  triangle_wayland_opengl.c  wl-callback.c  wl-callback.h  wl-kbconfig.c  wl-kbconfig.h  wl-registry.c  wl-registry.h  wl-seat.c  wl-seat.h  xdg-config.c  xdg-config.h
src/glad/: glad.c  meson.build
src/glad/glad/: glad.h
